# budget-compass

./: .gitignore  .pre-commit-config.yaml  .roomodes  AGENTS.md
.github/agents/: Full-stack developer.agent.md  architect.agent.md
.github/workflows/: backend-tests.yml  backend-typecheck.yml  lint.yml
.roo/commands/: code-review.md
.roo/rule-code/: guidelines.md
.roo/rules-architect/: guidelines.md
.roo/rules-code-reviewer/: guidelines.md
.roo/rules-ux-designer/: guidelines.md
.roo/skills/angular-component/: SKILL.md
.roo/skills/find-git-diffs/: SKILL.md
agent-commands/: code-review.md
agent-roles/: code-reviewer.md  devops.md  fullstack-architecht.md  fullstack-developer.md  ux-designer.md
agent-skills/: find-git-diffs.md
backend/: README.md  pyproject.toml
backend/agent-guidelines/: code-architechture-guidelines.md  coding-guidelines.md
backend/app/: main.py
backend/app/api/: auth.py  health.py  problem_details.py  router.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/domains/: __init__.py
backend/app/domains/auth/: errors.py  models.py  repository.py  schemas.py  service.py
backend/tests/domains/auth/: test_service.py
docs/: auth-flow-plan.md  linting-and-precommit.md  poc-for-general-ui-flow.ts  ui-accounts-design-system.md
frontend/: README.md  angular.json  eslint.config.mjs  package-lock.json  package.json
frontend/agent-guidelines/: coding-guidelines.md
frontend/src/: index.html  styles.scss
frontend/src/app/: app.html  app.routes.ts  app.spec.ts  app.ts
frontend/src/app/core/layout/: nav-item.interface.ts
frontend/src/app/features/budgets/: budgets.page.ts
frontend/src/app/features/dashboard/: dashboard.page.ts
frontend/src/app/features/goals/: goals.page.ts
project-docs/: user-stories.md
(+16 files in other folders)
