[project]
name = "budget-compass-backend"
version = "0.1.0"
description = "Budget Compass backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "ruff>=0.5.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "B", "UP"]

