[project]
name = "budget-compass-backend"
version = "0.1.0"
description = "Budget Compass backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110.0",
  "sqlmodel>=0.0.24",
  "pymysql>=1.1.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic-settings>=2.2.0",
  "email-validator>=2.1.0",
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "pyright>=1.1.390",
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "B", "UP"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
include = ["backend/app"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501"]  # Line too long (handled by ruff-format)

[tool.ruff.lint.isort]
known-first-party = ["app", "src"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
ignore_missing_imports = true
